--- a/orbi-web-games-developer/introdução-html/css/style.css
+++ b/orbi-web-games-developer/introdução-html/css/style.css
@@ -1,10 +1,21 @@
 body {
   background-color: #f7f7f7;
+  font-family: Verdana, sans-serif;
 }
 
 .photo {
  border: 1px solid #505050;
   border-radius: 50%;
+}
+
+#title {
+  font-size: 40px;
+ text-transform: uppercase;
+}
+
+a {
+  text-decoration: line-through;
+  color: #505050;
 }
 
 #title, .subtitle, .post_title {
@@ -29,6 +40,7 @@ body {
 .post_content {
   margin-top: 0;
   margin-bottom: 15px;
+  text-transform: capitalize;
 }
 
 .post_image {
