--- a/orbi-web-games-developer/introdução-html/css/style.css
+++ b/orbi-web-games-developer/introdução-html/css/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: #f7f7f7;
   font-family: Verdana, sans-serif;
+  max-width: 900px;
+  margin: auto;
 }
 
 .photo {
@@ -41,11 +43,12 @@ a {
   margin-top: 0;
   margin-bottom: 15px;
   text-transform: capitalize;
+  text-align: justify;
 }
 
 .post_image {
   margin-bottom: 15px;
-  
+  width: 100%;  
 }
 
 .contacts_list {
