--- a/orbi-web-games-developer/005 - jogo de nave/src/styles/styles.css
+++ b/orbi-web-games-developer/005 - jogo de nave/src/styles/styles.css
@@ -206,3 +206,15 @@ body {
 	background-image: url(../assets/images/disparo.png);
 }
 
+#explosao1 {
+	width: 15px;
+	height: 87px;
+	position: absolute;
+}
+
+#explosao2 {
+	width: 15px;
+	height: 87px;
+	position: absolute;	
+}
+
